# lox.py

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
src/lox/: __init__.py  lexer.py  main.py  token.py
tests/: test_lexer.py  test_token.py
